--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.8.2",
     "firebase-tools": "^11.0.1",
+    "framer-motion": "^10.16.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.17.0",
