--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mediapipe/camera_utils": "^0.3.1640029074",
-    "@mediapipe/selfie_segmentation": "^0.1.1632777926",
+    "@mediapipe/tasks-vision": "^0.10.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,7 +20,6 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
-    "react-webcam": "^7.0.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.0",
     "typescript": "^4.9.5",
