--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
-    "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.8.2",
     "firebase-tools": "^11.0.1",
     "framer-motion": "^10.16.4",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.17.0",
